--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,13 @@ hr {
 }
 
 .header img {
-    width: 350px;
+    width: 25%;
+    border-radius: 100%;
     margin-top: -3%;
+    height: 40vh;
+    object-fit: cover;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.151);
+    rotate: initial ;
 }
 
 h4 {
@@ -132,18 +137,18 @@ h4 a:hover {
 }
 
 .projetos div {
-    margin: 10px 40px 40px 40px;
+    margin: 10px 40px 0px 0px;
     padding: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.11);
+    
     border-radius: 30px;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.507);
+    
 
 }
 
 .projetos div img {
     margin-left: 0px;
     margin-top: 20px;
-    width: 500px;
+    width: 25vw;
     object-fit: contain;
     border-radius: 3%;
 
@@ -155,7 +160,7 @@ h4 a:hover {
 }
 
 .projetos div img:hover {
-    width: 510px;
+    width: 26vw;
     transition: 0.5s;
 }
 
@@ -203,7 +208,7 @@ h4 a:hover {
 .cards {
     display: flex;
     justify-content: center;
-
+    
 
 
 
@@ -211,14 +216,17 @@ h4 a:hover {
 
 .cards div {
     border: 0px solid rgba(0, 0, 0, 0.397);
-    width: 500px;
+    width: 25%;
     margin: 20px;
-    padding: 50px;
+    padding: 20px;
     border-radius: 20px;
-    box-shadow: 0px 0px 5px rgb(114, 111, 111);
+    box-shadow: 0px 0px 15px rgba(121, 108, 108, 0.274);
     background-color: rgb(252, 251, 251);
     color: rgb(0, 0, 0);
+    
 }
+
+
 
 .cards img {
     width: 25%;
@@ -232,8 +240,8 @@ h4 a:hover {
 
 .cards p {
     width: 100%;
-    text-align: justify;
-    font-size: 13pt;
+    text-align: center;
+    font-size: 12pt;
     font-weight: 300;
 }
 
@@ -241,4 +249,144 @@ h4 a:hover {
     text-align: center;
     font-size: 15pt;
     font-weight: 900;
+    text-decoration: underline;
+}
+
+.midias {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 10%;
+    
+    
+}
+.midias img {
+    width: 35%;
+}
+.midias p {
+    font-size: 29pt;
+    font-weight: 200;
+    margin-right: 25%;
+    margin-top: 6%;
+    text-decoration: underline;
+    
+
+    
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: -17%;
+    margin-left: 15%;
+}
+
+
+@media (max-width: 800px) {
+    .nav-container h1 {
+        font-family: 'Poppins';
+        font-weight: 300;
+        font-size: 22pt;
+    
+    }
+
+    .nav-container ul {
+        display: none;
+    }
+    .header {
+        
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+        margin-bottom: -220px;
+        
+        
+    }
+    
+    .header p:first-child {
+        font-size: 11pt;
+        margin-bottom: -16px;
+        text-align: center;
+    }
+    
+    .header h1 {
+        font-size: 30pt;
+        line-height: 60px;
+        text-align: center;
+        
+    }
+    
+    br {
+        display: none;
+    }
+    .header p:last-child {
+        font-size: 11pt;
+        text-align: center;
+        
+    
+    }
+    
+    .header img {
+        width: 55%;
+        border-radius: 100%;
+        margin-top: -3%;
+        height: 30vh;
+        object-fit: cover;
+        box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.151);
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+
+
+   
+    
+    .projetos a {
+        color: black;
+    }
+    
+    .projetos {
+        display: flex;
+        border-radius: 10px;
+        justify-content: center;
+       
+    
+    
+    }
+    
+    .projetos p {
+
+        
+    
+    }
+    .projetos div {
+        margin: 0 auto;
+    }
+    
+    .projetos div img {
+        
+        width: 250px;
+        object-fit: contain;
+        border-radius: 3%;
+        margin: 0 auto;
+        
+    }
+
+    /* Estou Aprendendo + Cards */
+
+    .learn-container h3 {
+      text-align: center;
+    }
+
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .cards div {
+        width: 90%;
+        
+    }
+    
+    
 }
