--- a/css/button.css
+++ b/css/button.css
@@ -82,3 +82,45 @@
     text-decoration: none;
 }
 
+@media (max-width: 800px) {
+  .wrapper .button{
+    display: inline-block;
+    height:  40px;
+    width: 40px;
+    
+    margin: 0 10px;
+    overflow: hidden;
+    background: #fff;
+    border-radius: 50px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.384);
+    transition: all 0.3s ease-out;
+  }
+  .wrapper .button:hover{
+    width: 200px;
+  }
+  .wrapper .button .icon{
+    display: inline-block;
+    margin-top: -20%;
+    width: 40px;
+    text-align: center;
+    border-radius: 50px;
+    box-sizing: border-box;
+    line-height: 60px;
+    transition: all 0.3s ease-out;
+  }
+
+  .wrapper .button .icon i{
+    font-size: 22px;
+    line-height: 60px;
+    transition: all 0.3s ease-out;
+  }
+
+  .wrapper .button span{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 60px;
+    margin-left: 10px;
+    transition: all 0.3s ease-out;
+  }
+
+}
