--- a/css/style.css
+++ b/css/style.css
@@ -269,9 +269,6 @@ h4 a:hover {
     margin-right: 25%;
     margin-top: 6%;
     text-decoration: underline;
-    
-
-    
 }
 
 .wrapper {
@@ -335,11 +332,7 @@ h4 a:hover {
         box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.151);
         margin: 0 auto;
         margin-bottom: 10px;
-    }
-
-
-   
-    
+    } 
     .projetos a {
         color: black;
     }
@@ -348,16 +341,8 @@ h4 a:hover {
         display: flex;
         border-radius: 10px;
         justify-content: center;
-       
-    
-    
     }
     
-    .projetos p {
-
-        
-    
-    }
     .projetos div {
         margin: 0 auto;
     }
@@ -385,6 +370,34 @@ h4 a:hover {
 
     .cards div {
         width: 90%;
+        
+    }
+
+    /* Midias Sociais */
+
+    .midias {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        
+        
+    }
+    .midias img {
+        width: 100%;
+    }
+    .midias p {
+        font-size: 21pt;
+        width: 100%;
+        font-weight: 200;
+        margin-right: 25%;
+        text-align: center;
+        text-decoration: none;
+    }
+    
+    .wrapper {
+        margin-bottom: 10px;
+       margin-left: -5%;
+        margin-top: 10px;
         
     }
     
