--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 
 }
 
+#header {
+    display: none;
+}
+
 .nav-container h1 {
     font-family: 'Poppins';
     font-weight: 300;
@@ -31,7 +35,6 @@ hr {
     justify-content: space-between;
     margin-top: 20px;
     margin: 20px 10% 0px 10%;
-
 
 }
 
@@ -145,6 +148,13 @@ h4 a:hover {
 
 }
 
+.projetos div:nth-child(4){
+    margin-top: -50px;
+}
+.projetos div:nth-child(5){
+    margin-top: -50px;
+}
+
 .projetos div img {
     margin-left: 0px;
     margin-top: 20px;
@@ -152,6 +162,13 @@ h4 a:hover {
     object-fit: contain;
     border-radius: 3%;
 
+
+}
+
+.img-etec-redes-0 {
+    height: 70%;
+    border-radius: 3%;
+    object-fit: contain;
 
 }
 
@@ -168,13 +185,18 @@ h4 a:hover {
     box-shadow: 0px 0px 20px rgba(99, 135, 139, 0.877);
 }
 
-.img-etec-redes-1 {
+.img-etec-redes-0 {
     box-shadow: 0px 0px 20px rgba(89, 111, 184, 0.719);
+}
+.img-etec-redes-1 {
+    box-shadow: 0px 0px 20px rgba(89, 111, 184, 0.904);
 }
 
 .img-site-senai-01 {
-    box-shadow: 0px 0px 20px rgba(92, 105, 93, 0.719);
+    box-shadow: 0px 0px 20px rgba(93, 129, 96, 0.719);
 }
+
+
 
 
 
@@ -280,15 +302,27 @@ h4 a:hover {
 
 
 @media (max-width: 800px) {
+
+    .nav-container {
+        display: flex;
+        justify-content: space-around;
+        margin: 30px 16% 0px 20%;
+       
+       
+    
+    }
     .nav-container h1 {
         font-family: 'Poppins';
         font-weight: 300;
         font-size: 22pt;
+        
     
     }
+    
 
     .nav-container ul {
         display: none;
+        
     }
     .header {
         
@@ -356,6 +390,13 @@ h4 a:hover {
         
     }
 
+    .projetos div:nth-child(4){
+        margin-top: -30px;
+    }
+    .projetos div:nth-child(5){
+        margin-top: -10px;
+    }
+
     /* Estou Aprendendo + Cards */
 
     .learn-container h3 {
@@ -386,7 +427,7 @@ h4 a:hover {
         width: 100%;
     }
     .midias p {
-        font-size: 21pt;
+        font-size: 1.7rem;
         width: 100%;
         font-weight: 200;
         margin-right: 25%;
@@ -395,11 +436,86 @@ h4 a:hover {
     }
     
     .wrapper {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
        margin-left: -5%;
         margin-top: 10px;
         
     }
     
+    .git-icon {
+        display: none;
+    }
+
+    #header{
+        display: block;
+        margin-left: 70%;
+        background-color: white;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.103);
+        border-radius: 5px;
+        
+        
+    }
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    padding-top: 20px;
+    right: 0px;
     
+    transition: 0.6s;
+    background-color: white;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu li:hover {
+      color: white;
+      background-color: white;
+  }
+  #menu a {
+    padding: 1rem 0;
+    margin: 0 1rem;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+  }
+  #btn-mobile {
+    display: flex;
+    padding:  10px;
+    padding-top: 13px;
+    font-size: 12pt;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5em;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 20px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
 }
