--- a/css/button.css
+++ b/css/button.css
@@ -83,6 +83,14 @@
 }
 
 @media (max-width: 800px) {
+  .wrapper .button span {
+    display: none;
+  }
+
+  .wrapper .button:hover{
+    width: 9.2%;
+  }
+
   .wrapper .button{
     display: inline-block;
     height:  40px;
@@ -95,9 +103,7 @@
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.384);
     transition: all 0.3s ease-out;
   }
-  .wrapper .button:hover{
-    width: 200px;
-  }
+ 
   .wrapper .button .icon{
     display: inline-block;
     margin-top: -20%;
